# aleo-std

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs
.resources/: license_header
cpu/: Cargo.toml  README.md
cpu/src/: lib.rs
examples/: time.rs  timed.rs  timer.rs
profiler/: Cargo.toml  README.md
profiler/src/: lib.rs
src/: lib.rs
storage/: Cargo.toml  README.md
storage/src/: lib.rs
time/: Cargo.toml  README.md
time/src/: lib.rs
timed/: Cargo.toml  README.md
timed/src/: lib.rs
timer/: Cargo.toml  README.md
timer/src/: lib.rs  tests.rs
