[package]
name = "aleo-std"
version = "0.1.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A standard library for Aleo repositories"
exclude = ["**/*.md"]
license = "GPL-3.0"
edition = "2018"

[workspace]
members = [ "storage", "time", "timed", "timer" ]

[dependencies]
aleo-std-storage = { path = "./storage", version = "0.1.1", default-features = false }
aleo-std-time = { path = "./time", version = "0.1.0", default-features = false }
aleo-std-timed = { path = "./timed", version = "0.1.0", default-features = false }
aleo-std-timer = { path = "./timer", version = "0.1.0", default-features = false }

[dev-dependencies.rusty-hook]
version = "0.11.2"

[features]
default = ["full"]

# Supported feature modes

full = ["time", "timed", "timer"]
wasm = []

# aleo-std feature configuration

time = ["aleo-std-time/time"]
timed = ["aleo-std-timed/timed"]
timer = ["aleo-std-timer/timer"]
