[package]
name = "aleo-std"
version = "0.1.15"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A standard library for Aleo repositories"
exclude = ["**/*.md"]
license = "GPL-3.0"
edition = "2018"

[workspace]
members = [ "cpu", "profiler", "storage", "time", "timed", "timer" ]

[dependencies]
aleo-std-cpu = { path = "./cpu", version = "0.1.3", default-features = false, optional = true }
aleo-std-profiler = { path = "./profiler", version = "0.1.14", default-features = false }
aleo-std-storage = { path = "./storage", version = "0.1.3", default-features = false, optional = true }
aleo-std-time = { path = "./time", version = "0.1.1", default-features = false }
aleo-std-timed = { path = "./timed", version = "0.1.2", default-features = false }
aleo-std-timer = { path = "./timer", version = "0.1.2", default-features = false }

[dev-dependencies.rusty-hook]
version = "0.11.2"

[features]
default = []

# Supported feature modes
wasm = []

# aleo-std feature configuration
cpu = ["aleo-std-cpu"]
profiler = ["aleo-std-profiler/profiler"]
storage = ["aleo-std-storage"]
time = ["aleo-std-time/time"]
timed = ["aleo-std-timed/timed"]
timer = ["aleo-std-timer/timer"]
