[package]
name = "aleo-std-profiler"
version = "1.0.2"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A profiler to measure runtime performance"
license = "Apache-2.0"
edition = "2021"

[dependencies.colored]
version = "2"
optional = true

[features]
default = []
profiler = [ "colored" ]
