[package]
name = "aleo-std-time"
version = "0.1.1"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A convenience attribute to time functions"
license = "GPL-3.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"

[dependencies.syn]
version = "1"
features = ["full"]

[features]
default = []
time = []
