[package]
name = "aleo-std-time"
version = "1.0.2"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A convenience attribute to time functions"
license = "Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"

[dependencies.syn]
version = "1"
features = ["full"]

[features]
default = []
time = []
