[package]
name = "aleo-std-timed"
version = "0.1.0"
authors = [ "The Aleo Team <hello@aleo.org>" ]
license = "GPL-3.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { version = "1", features = ["full", "extra-traits"] }

[features]
default = []
timed = []
