[package]
name = "aleo-std-timed"
version = "1.0.2"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "A profiler to conveniently time function executions"
license = "Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1" }
quote = { version = "1" }
syn = { version = "1", features = ["full", "extra-traits"] }

[features]
default = []
timed = []
